# rust_kernel

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
asm/: boot.asm  grub.cfg  interrupts.asm  multiboot.asm
rust/: Cargo.toml  kernel.ld  x86_64-unknown-none-gnu.json
rust/kernel/: Cargo.toml  kernel.ld
rust/kernel/src/: lib.rs  vga_buffer.rs
rust/kernel/src/display/: mod.rs  vga.rs
rust/kernel/src/interrupts/: keyboard.rs  mod.rs
rust/src/: lib.rs
rust/src/display/: vga.rs
rust/src/libc/: memory.rs
src/rust/: main.rs
