[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[build]
target = "x86_64-unknown-none"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
strip = true
panic = "abort"

[unstable]
build-std-features = ["compiler-builtins-mem"]
build-std = ["core", "compiler-builtins"]

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[build-dependencies]
cc = "1.2.12"


